--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container">
         <div class="hero">
           <h1 id="top"><strong>Eric Lim</strong></h1>
-          <h2>SoCal Filmmaker</h2>Also: GGServers COO and Student. John 3:16<br/>
+          <h2>Student at Chapman University.</h2>Also, Filmmaker.<br/>
             <a href="#about" class="btn btn-large btn-full">About</a>
             <a href="#references" class="btn btn-full">References</a>
             <div class="btn btn-full dropdown">
