--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Eric Lim</title>
 <meta name="Description" content="Personal Portfolio of Eric Lim">
-<meta name="Keywords" content="Film, Photography,">
+<meta name="Keywords" content="Film, Photography, Portfolio, Personal, ">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic|Lato:300,400,500,600' rel='stylesheet' type='text/css' />
   <link href='https://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css' rel='stylesheet' type='text/css' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -24,6 +24,8 @@
     });
   });
 	</script>
+
+
   <link href='main.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
