--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
       <div class="container">
         <div class="hero">
           <h1 id="top"><strong>Eric Lim</strong></h1>
-          <h2>Student at Chapman University.</h2>Also, Filmmaker.<br/>
+          Researching developer, aspiring filmmaker, <br /> occasional photographer, almost musician and Student.<br/>
             <a href="#about" class="btn btn-large btn-full">About</a>
-            <a href="#references" class="btn btn-full">References</a>
             <div class="btn btn-full dropdown">
-              <span>Portfolio</span>
+              <span>My Work</span>
               <div class="dropdown-content">
                 <a href="/films.html">Films</a>
                 <a href="/otherwork.html">Other</a>
@@ -51,7 +50,9 @@
 
     </div>
   </header>
-  <div class="container">
+  <!-- icons comment box
+
+   <div class="container">
     <div class="box">
       <div class="inner">
         <span class="icon ion-ribbon-a"></span>
@@ -74,11 +75,11 @@
     </div>
   </div>
   <br clear="both">
-
+-->
   <section id="about">
     <div class="container">
 
-      <h1>About Eric</h1>
+      <h1><b>About Eric</b></h1>
       <div class="box">
         <div class="inner">
           <img src="img/eric1.jpg" alt="Mountain View" style="width:160px;height:160px;border-radius: 100px;-webkit-border-radius: 100px;-moz-border-radius: 100px;padding:1px;border:1px solid #c5effd;background-color:#c5effd;">
@@ -88,13 +89,14 @@
       <br/>
       <h2>Education</h2>
       <p><ul><li>Arnold O. Beckman High School (Graduation Date: June 20, 2017)</li>
-      <li>Irvine Valley College, C-Programming (Summer, 2015)</li></ul></p>
+      <li>Chapman University </li></ul></p>
       <h2>Experience</h2>
       <p><h4>Operations Manager, GGServers LTD.</h4> GGServers is a global computer networking company. Headquarters are located in Toronto, Canada.</p>
     </div>
     </section>
+
   <br clear="both">
-  <section id="references">
+  <!-- <section id="references">
     <div class="container">
       <h1>References</h1>
       <p><ul><li>Mr. Chris Perdue, Film Director, Beckman High School Teacher (<a href="mailto:socalsff@gmail.com">SoCalSFF@gmail.com</a>)</li>
@@ -103,7 +105,9 @@
       </ul></p>
     </div>
   </section>
+-->
   <br clear="both">
+
   <section id="contact">
     <div class="container">
       <center><p><span class="icon ion-at"></span><b>Contact me!</b></p>
